# BitGraph

./: CLAUDE.md  testing.cpp
bitscan/: tables.cpp
docs/: Doxyfile
src/: CLAUDE.md
src/bitscan/: CMakeLists.txt  README.md  bbalgorithm.h  bbconfig.h  bbobject.h  bbscan.h  bbscan_sparse.h  bbsentinel.cpp  bbsentinel.h  bbset.cpp  bbset.h  bbset_sparse.cpp  bbset_sparse.h  bbtypes.h  bitblock.cpp  bitblock.h  bitscan.h  roadmap_plan.md  tables.cpp  tables.h
src/bitscan/tests/: test_algorithms.cpp  test_bbscan.cpp  test_bbscan_nested.cpp  test_bbsentinel.cpp  test_bitblock.cpp  test_bitset.cpp  test_bitset_sparse.cpp  test_example.cpp  test_masks.cpp
src/graph/: CMakeLists.txt  graph.h  legal.txt  readme.md  simple_graph.h  simple_graph_ew.cpp  simple_graph_ew.h  simple_graph_w.cpp  simple_graph_w.h  simple_sparse_graph.h  simple_ugraph.cpp  simple_ugraph.h
src/graph/algorithms/: decode.cpp  decode.h  filter_graph_sort_type.h  graph_conversions.h  graph_fast_sort.h  graph_fast_sort_edge_weighted.h  graph_fast_sort_weighted.h  graph_func.h  graph_gen.h  graph_map.h  graph_sort.h  kcore.h
src/graph/data/: bio-MUTAG_g1.edges  bio-yeast-protein-inter.edges  toy_ew_dimacs.txt
src/graph/examples/: gen_random_bench.cpp  graph_formats.cpp  lb_kcore.cpp
src/graph/formats/: dimacs_format.h  edges_format.h  mmio.cpp  mmio.h  mmx_format.h  yED_format.h
src/graph/tests/: test_decode.cpp  test_format.cpp  test_func.cpp  test_graph.cpp  test_graph_conversions.cpp  test_graph_fast_sort.cpp  test_graph_fast_sort_weighted.cpp  test_graph_map.cpp  test_kcore.cpp  test_random_graph.cpp  test_sparse_graph.cpp  test_ugraph.cpp  test_wegraph.cpp  test_wgraph.cpp
src/utils/: CMakeLists.txt  batch.h  benchmark.cpp  benchmark.h  common.cpp  common.h  common_paths.h  common_types.cpp  common_types.h  file.h  logger.h  prec_timer.h  result.cpp  result.h  test_analyser.cpp
src/utils/info/: info_base.cpp  info_base.h  info_clq.cpp  info_clq.h
src/utils/tests/: test_common.cpp  test_precise_timer.cpp  test_testAnalyser.cpp
